@@ -17,8 +17,8 @@
 	z-index: 100;
 	left: 0px;
 	background: #eae0d4; 
-	margin-top:-73px; 
-	margin-left:8px;
+	margin-top:-74px; 
+	margin-left:10px;
 }
 
 /* Navigator & Flyout menu Styles ------*/
