@@ -6,8 +6,8 @@
 .ui-widget-content a:hover 				 { color:red; }
 
 .ui-tabs .ui-tabs-nav 					 { padding: .3em .3em 0 .3em; border-color:#888888; }
-.ui-tabs .ui-tabs-nav li 					 { font-size:0.9em; bottom:-3px; margin:0em 0.3em 0 0; border-color:#888888; background: #eff8f8;}
-.ui-tabs .ui-tabs-nav li a 					 { color:#555555; padding: .2em .8em .2em .8em;  }
+.ui-tabs .ui-tabs-nav li 					 { font-size:0.9em; bottom:-3px; margin:0 0.15em 0 0.1em; border-color:#888888; background: #eff8f8;}
+.ui-tabs .ui-tabs-nav li a 					 { color:#555555; padding: .2em .2em .2em .2em;  }
 .ui-tabs .ui-tabs-nav li:hover			 { color:red; background: #dfe8e8;}
 .ui-tabs .ui-tabs-nav li a:hover			 { color:red;}
 
@@ -34,7 +34,7 @@
 	right: 0px; 
 	background: #eff8f8; 
 	margin-top:0px; 
-	margin-right:13px;
+	margin-right:11px;
 }
 #tabs li.ui-tabs-selected {
  padding-bottom: 1px;
